tests/fixtures/valid_programs/variables.cryo
// Variable declarations and arithmetic
function main() -> int {
    const x: int = 42;
    mut y: int = 10;
    y = y + x;
    
    const z: float = 3.14;
    const name: string = "CryoLang";
    const flag: boolean = true;
    
    return y;
}