tests/fixtures/invalid_programs/missing_semicolon.cryo
namespace Main;

// Syntax error: missing semicolon
function main() -> int {
    const x: int = 42
    return 0;
}